# cookiecutter-fastapi

./: .gitignore  alembic.ini  cookiecutter.json  mypy.ini  pyproject.toml  test.env  tox.ini
.circleci/: config.yml
alembic/: env.py
alembic/versions/: eacb1a847242_initial_commit.py
src/{{ cookiecutter.project_slug }}/app/: auth.py  dependencies.py  main.py  settings.py
src/{{ cookiecutter.project_slug }}/app/admin/api/v1/: __init__.py  admin_users.py
src/{{ cookiecutter.project_slug }}/app/tasks/: __init__.py
src/{{ cookiecutter.project_slug }}/db_api/: __init__.py
src/{{ cookiecutter.project_slug }}/models/: __init__.py  admin_user.py  common.py
src/{{ cookiecutter.project_slug }}/repositories/: __init__.py
src/{{ cookiecutter.project_slug }}/schemas/: admin_user.py
src/{{ cookiecutter.project_slug }}/services/: database.py
tests/: conftest.py  init_db.py  test_admin_user.py  test_app.py  test_celery.py  test_database.py
