[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
author=['{{ cookiecutter.author_name }}']
description='{{ cookiecutter.description }}',
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
SQLAlchemy = "^2.0.34"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
httpx = "^0.27.2"
pyjwt = "^2.9.0"
celery = {extras = ["pytest", "redis"], version = "^5.4.0"}

[tool.poetry.group.dev.dependencies]
honcho = "^1.1.0"
pytest = "^8.3.3"
tox = "^4.18.1"
mypy = "^1.11.2"
ruff = "^0.6.5"
testcontainers = "^4.8.1"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.30.0"
coverage = "^7.6.1"
greenlet = "^3.1.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
celery-types = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
